build(config): adjusting native image binary config