@@ -31,18 +31,21 @@ graalvmNative {
             imageName.set(application.applicationName)
             buildArgs.add("--enable-url-protocols=https")
             buildArgs.add("--rerun-class-initialization-at-runtime=kotlin.DeprecationLevel")
+            buildArgs.add("--enable-native-access=ALL-UNNAMED")
             buildArgs.add("-H:+JNI")
             resources {
                 includedPatterns.add("application[.]properties")
-//                includedPatterns.add(".*[.](so|dylib|dll)")
+                includedPatterns.add("ortools-$osName-$osArch/.*")
             }
         }
         named("test") {
             buildArgs.add("--enable-url-protocols=https")
+            buildArgs.add("--rerun-class-initialization-at-runtime=kotlin.DeprecationLevel")
+            buildArgs.add("--enable-native-access=ALL-UNNAMED")
             buildArgs.add("-H:+JNI")
             resources {
                 includedPatterns.add("application[.]properties")
-//                includedPatterns.add(".*[.](so|dylib|dll)")
+                includedPatterns.add("ortools-$osName-$osArch/.*")
             }
         }
     }
